web-infras/parser/tests/fixtures/babel/es2015/object/invalid-property-initializer-in-rhs/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,8)
1|obj = {x = 0}
 |      ^
